# Tazik2

./: LICENSE  README.md  notes.txt  org.chaiman.tazik.lnk  package-lock.json  package.json  tauri-2.0.0-beta.23.lnk
src/: code_editors.js  index.html  main.js  my.styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: jshint@2.13.2.js
src/lib/highlight/: highlight.js
