[package]
name = "tazik2"
version = "0.0.2"
description = "Tazik2"
authors = ["4aiman"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tazik2_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = { version = "2.0.0-beta.11", featues = ["unsafe-headers"] }
tauri-plugin-fs = "2.0.0-beta.10"
tauri-plugin-process = "2.0.0-beta.7"
tauri-plugin-websocket = "2.0.0-beta.8"
tauri-plugin-dialog = "2.0.0-beta.10"
tauri-plugin-clipboard-manager = "2.1.0-beta.5"
tauri-plugin-os = "2.0.0-beta.7"
tauri-plugin-log = "2.0.0-beta.7"

